<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistroFragment"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/retroceder"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:icon="@drawable/atras"
            app:strokeColor="@color/white"
            app:iconTint="@color/verdeClaro"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Registro"
            android:layout_centerInParent="true"
            android:textColor="@color/verdeClaro"
            android:textStyle="bold"
            android:textSize="20sp"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/registro"
            android:layout_marginBottom="20dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="4dp"
            android:hint="@string/registro_usuario"
            app:endIconMode="clear_text"
            style="@style/Widget.Evaluacion3.TextInputLayout"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/correo_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/registro_correo"
            app:endIconMode="clear_text"
            style="@style/Widget.Evaluacion3.TextInputLayout"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/correo_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nombres_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/registro_nombre"
            app:endIconMode="clear_text"
            style="@style/Widget.Evaluacion3.TextInputLayout"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nombres_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/apellido_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/registro_apellido"
            app:endIconMode="clear_text"
            style="@style/Widget.Evaluacion3.TextInputLayout"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/apellido_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/registro_contraseña"
            app:endIconMode="clear_text"
            style="@style/Widget.Evaluacion3.TextInputLayout"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_marginTop="20dp"
            android:id="@+id/registrarse_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="Registrarse"
            style="@style/IngresarButton"
            app:cornerRadius="20dp"
            />
           </LinearLayout>
</LinearLayout>